RANCHER-252 replace java 11 method