@@ -2,6 +2,7 @@ package org.folio.test.karate;
 
 import com.intuit.karate.RuntimeHook;
 import com.intuit.karate.core.FeatureRuntime;
+import org.apache.commons.lang3.StringUtils;
 import org.folio.test.TestBase;
 import org.folio.test.annotation.FolioTest;
 import org.slf4j.Logger;
@@ -24,7 +25,7 @@ public class FolioRuntimeHook implements RuntimeHook {
     public void afterFeature(FeatureRuntime fr) {
         FolioTest annotation = testClass.getAnnotation(FolioTest.class);
         if (annotation != null) {
-            String testName = annotation.name().isBlank() ? testClass.getSimpleName() : annotation.name();
+            String testName = StringUtils.isBlank(annotation.name()) ? testClass.getSimpleName() : annotation.name();
             String prefix = "[" + annotation.team() + "/" + annotation.module() + "] " + testName + " " + number + ".  ";
 
             fr.result.setDisplayName(prefix + fr.result.getDisplayName());
